--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.4",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.10.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
+    "rabbitmq": "^0.0.2",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2"
   }
